// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarkerChart EmptyReasons shows a reason when a profile has no markers 1`] = `
<div
  class="EmptyReasons"
>
  <h3>
    The 
    marker chart
     is empty for “
    Empty
    ”
  </h3>
  <p>
    This thread contains no markers for this chart.
  </p>
</div>
`;

exports[`MarkerChart EmptyReasons shows a reason when a profile's markers have been filtered out 1`] = `
<div
  class="EmptyReasons"
>
  <h3>
    The 
    marker chart
     is empty for “
    Empty
    ”
  </h3>
  <p>
    All markers were filtered out by the current selection or search term.
  </p>
</div>
`;

exports[`MarkerChart renders the hoveredItem markers properly 1`] = `
Array [
  Array [
    "set fillStyle",
    "#ffffff",
  ],
  Array [
    "fillRect",
    0,
    0,
    365,
    300,
  ],
  Array [
    "set lineWidth",
    1,
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "fillRect",
    151,
    1,
    123,
    1,
  ],
  Array [
    "fillRect",
    150,
    2,
    125,
    11,
  ],
  Array [
    "fillRect",
    151,
    13,
    123,
    1,
  ],
  Array [
    "measureText",
    "",
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "fillRect",
    289,
    1,
    48,
    1,
  ],
  Array [
    "fillRect",
    288,
    2,
    50,
    11,
  ],
  Array [
    "fillRect",
    289,
    13,
    48,
    1,
  ],
  Array [
    "measureText",
    "",
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "fillRect",
    151,
    17,
    123,
    1,
  ],
  Array [
    "fillRect",
    150,
    18,
    125,
    11,
  ],
  Array [
    "fillRect",
    151,
    29,
    123,
    1,
  ],
  Array [
    "measureText",
    "",
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "fillRect",
    151,
    33,
    35.5,
    1,
  ],
  Array [
    "fillRect",
    150,
    34,
    37.5,
    11,
  ],
  Array [
    "fillRect",
    151,
    45,
    35.5,
    1,
  ],
  Array [
    "measureText",
    "",
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "arc",
    205,
    71.5,
    3.75,
    0,
    6.283185307179586,
  ],
  Array [
    "fill",
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "fillRect",
    214,
    81,
    123,
    1,
  ],
  Array [
    "fillRect",
    213,
    82,
    125,
    11,
  ],
  Array [
    "fillRect",
    214,
    93,
    123,
    1,
  ],
  Array [
    "measureText",
    "",
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "fillRect",
    214,
    97,
    60.5,
    1,
  ],
  Array [
    "fillRect",
    213,
    98,
    62.5,
    11,
  ],
  Array [
    "fillRect",
    214,
    109,
    60.5,
    1,
  ],
  Array [
    "set fillStyle",
    "white",
  ],
  Array [
    "fillText",
    "click",
    216,
    107,
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "arc",
    243,
    119.5,
    3.75,
    0,
    6.283185307179586,
  ],
  Array [
    "fill",
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "fillRect",
    264,
    129,
    85.5,
    1,
  ],
  Array [
    "fillRect",
    263,
    130,
    87.5,
    11,
  ],
  Array [
    "fillRect",
    264,
    141,
    85.5,
    1,
  ],
  Array [
    "measureText",
    "",
  ],
  Array [
    "set fillStyle",
    "Highlight",
  ],
  Array [
    "fillRect",
    176,
    49,
    73,
    1,
  ],
  Array [
    "fillRect",
    175,
    50,
    75,
    11,
  ],
  Array [
    "fillRect",
    176,
    61,
    73,
    1,
  ],
  Array [
    "set fillStyle",
    "HighlightText",
  ],
  Array [
    "fillText",
    "Marker B",
    178,
    59,
  ],
  Array [
    "set fillStyle",
    "#ededf0",
  ],
  Array [
    "fillRect",
    149,
    0,
    1,
    300,
  ],
  Array [
    "fillRect",
    0,
    15,
    365,
    1,
  ],
  Array [
    "fillRect",
    0,
    31,
    365,
    1,
  ],
  Array [
    "fillRect",
    0,
    47,
    365,
    1,
  ],
  Array [
    "fillRect",
    0,
    63,
    365,
    1,
  ],
  Array [
    "fillRect",
    0,
    79,
    365,
    1,
  ],
  Array [
    "fillRect",
    0,
    95,
    365,
    1,
  ],
  Array [
    "fillRect",
    0,
    111,
    365,
    1,
  ],
  Array [
    "fillRect",
    0,
    127,
    365,
    1,
  ],
  Array [
    "fillRect",
    0,
    143,
    365,
    1,
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "fillText",
    "Marker A",
    5,
    11,
  ],
  Array [
    "fillText",
    "Marker H with no start",
    5,
    43,
  ],
  Array [
    "fillText",
    "UserTiming",
    5,
    59,
  ],
  Array [
    "fillText",
    "Dot marker E",
    5,
    75,
  ],
  Array [
    "fillText",
    "Very very very very very ver…",
    5,
    91,
  ],
  Array [
    "fillText",
    "Marker G type DOMEvent",
    5,
    107,
  ],
  Array [
    "fillText",
    "Non-interval marker F withou…",
    5,
    123,
  ],
  Array [
    "fillText",
    "Marker H with no end",
    5,
    139,
  ],
]
`;

exports[`MarkerChart renders the hoveredItem markers properly 2`] = `
<div
  class="tooltip"
  data-testid="tooltip"
  style="left: 189px; top: 70px;"
>
  <div
    class="tooltipMarker"
  >
    <div
      class="tooltipHeader"
    >
      <div
        class="tooltipOneLine"
      >
        <div
          class="tooltipTiming"
        >
          6.0ms
        </div>
        <div
          class="tooltipTitle"
        >
          UserTiming
        </div>
      </div>
      <div
        class="tooltipDetails"
      >
        <div
          class="tooltipLabel"
        >
          Thread
          :
        </div>
        Empty
      </div>
    </div>
    <div
      class="tooltipDetails"
    >
      <div
        class="tooltipLabel"
      >
        Name
        :
      </div>
      Marker B
    </div>
  </div>
</div>
`;

exports[`MarkerChart renders the normal marker chart and matches the snapshot 1`] = `
<div
  aria-labelledby="marker-chart-tab-button"
  class="markerChart"
  id="marker-chart-tab"
  role="tabpanel"
>
  <div
    class="markerSettings"
  >
    <div
      class="markerSettingsSpacer"
    />
    <div
      class="panelSearchField markerSettingsSearchField"
    >
      <label
        class="panelSearchFieldLabel"
      >
        Filter Markers: 
        <form
          class="idleSearchField panelSearchFieldInput"
        >
          <input
            class="idleSearchFieldInput photon-input"
            name="search"
            placeholder="Enter filter terms"
            required=""
            title="Only display markers that match a certain name"
            type="search"
            value=""
          />
          <input
            class="idleSearchFieldButton"
            tabindex="-1"
            type="reset"
          />
        </form>
        <div
          class="panelSearchFieldIntroduction isHidden"
        >
          Did you know you can use the comma (,) to search using several terms?
        </div>
      </label>
    </div>
  </div>
  <div
    class="react-contextmenu-wrapper treeViewContextMenu"
  >
    <div
      class="chartViewport"
      tabindex="0"
    >
      <div>
        <canvas
          class="chartCanvas markerChartCanvas"
          height="600"
          style="width: 365px; height: 300px;"
          width="730"
        />
      </div>
      <div
        class="chartViewportScroll hidden"
      >
        Zoom Chart:
        <kbd
          class="chartViewportScrollKbd"
        >
          Ctrl + Scroll
        </kbd>
        or
        <kbd
          class="chartViewportScrollKbd"
        >
          Shift + Scroll
        </kbd>
      </div>
    </div>
  </div>
</div>
`;

exports[`MarkerChart renders the normal marker chart and matches the snapshot 2`] = `
Array [
  Array [
    "scale",
    1,
    1,
  ],
  Array [
    "scale",
    2,
    2,
  ],
  Array [
    "set fillStyle",
    "#ffffff",
  ],
  Array [
    "fillRect",
    0,
    0,
    365,
    300,
  ],
  Array [
    "set lineWidth",
    1,
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "measureText",
    "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ.()< /:-_",
  ],
  Array [
    "measureText",
    "…",
  ],
  Array [
    "fillRect",
    151,
    1,
    123,
    1,
  ],
  Array [
    "fillRect",
    150,
    2,
    125,
    11,
  ],
  Array [
    "fillRect",
    151,
    13,
    123,
    1,
  ],
  Array [
    "measureText",
    "",
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "fillRect",
    288.5,
    1,
    48,
    1,
  ],
  Array [
    "fillRect",
    287.5,
    2,
    50,
    11,
  ],
  Array [
    "fillRect",
    288.5,
    13,
    48,
    1,
  ],
  Array [
    "measureText",
    "",
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "fillRect",
    151,
    17,
    123,
    1,
  ],
  Array [
    "fillRect",
    150,
    18,
    125,
    11,
  ],
  Array [
    "fillRect",
    151,
    29,
    123,
    1,
  ],
  Array [
    "measureText",
    "",
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "fillRect",
    151,
    33,
    35.5,
    1,
  ],
  Array [
    "fillRect",
    150,
    34,
    37.5,
    11,
  ],
  Array [
    "fillRect",
    151,
    45,
    35.5,
    1,
  ],
  Array [
    "measureText",
    "",
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "fillRect",
    176,
    49,
    73,
    1,
  ],
  Array [
    "fillRect",
    175,
    50,
    75,
    11,
  ],
  Array [
    "fillRect",
    176,
    61,
    73,
    1,
  ],
  Array [
    "measureText",
    "Marker B",
  ],
  Array [
    "set fillStyle",
    "white",
  ],
  Array [
    "fillText",
    "Marker B",
    178,
    59,
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "arc",
    205,
    71.5,
    3.75,
    0,
    6.283185307179586,
  ],
  Array [
    "fill",
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "fillRect",
    213.5,
    81,
    123,
    1,
  ],
  Array [
    "fillRect",
    212.5,
    82,
    125,
    11,
  ],
  Array [
    "fillRect",
    213.5,
    93,
    123,
    1,
  ],
  Array [
    "measureText",
    "",
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "fillRect",
    213.5,
    97,
    60.5,
    1,
  ],
  Array [
    "fillRect",
    212.5,
    98,
    62.5,
    11,
  ],
  Array [
    "fillRect",
    213.5,
    109,
    60.5,
    1,
  ],
  Array [
    "measureText",
    "click",
  ],
  Array [
    "set fillStyle",
    "white",
  ],
  Array [
    "fillText",
    "click",
    215.5,
    107,
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "beginPath",
  ],
  Array [
    "arc",
    242.5,
    119.5,
    3.75,
    0,
    6.283185307179586,
  ],
  Array [
    "fill",
  ],
  Array [
    "set fillStyle",
    "#45a1ff",
  ],
  Array [
    "fillRect",
    263.5,
    129,
    85.5,
    1,
  ],
  Array [
    "fillRect",
    262.5,
    130,
    87.5,
    11,
  ],
  Array [
    "fillRect",
    263.5,
    141,
    85.5,
    1,
  ],
  Array [
    "measureText",
    "",
  ],
  Array [
    "set fillStyle",
    "#ededf0",
  ],
  Array [
    "fillRect",
    149,
    0,
    1,
    300,
  ],
  Array [
    "fillRect",
    0,
    15,
    365,
    1,
  ],
  Array [
    "fillRect",
    0,
    31,
    365,
    1,
  ],
  Array [
    "fillRect",
    0,
    47,
    365,
    1,
  ],
  Array [
    "fillRect",
    0,
    63,
    365,
    1,
  ],
  Array [
    "fillRect",
    0,
    79,
    365,
    1,
  ],
  Array [
    "fillRect",
    0,
    95,
    365,
    1,
  ],
  Array [
    "fillRect",
    0,
    111,
    365,
    1,
  ],
  Array [
    "fillRect",
    0,
    127,
    365,
    1,
  ],
  Array [
    "fillRect",
    0,
    143,
    365,
    1,
  ],
  Array [
    "set fillStyle",
    "#000000",
  ],
  Array [
    "measureText",
    "Marker A",
  ],
  Array [
    "fillText",
    "Marker A",
    5,
    11,
  ],
  Array [
    "measureText",
    "Marker H with no start",
  ],
  Array [
    "fillText",
    "Marker H with no start",
    5,
    43,
  ],
  Array [
    "measureText",
    "UserTiming",
  ],
  Array [
    "fillText",
    "UserTiming",
    5,
    59,
  ],
  Array [
    "measureText",
    "Dot marker E",
  ],
  Array [
    "fillText",
    "Dot marker E",
    5,
    75,
  ],
  Array [
    "measureText",
    "Very very very very very very Very very very very very very Very very very very very very Very very very very very very Very very very very very very long Marker D",
  ],
  Array [
    "fillText",
    "Very very very very very ver…",
    5,
    91,
  ],
  Array [
    "measureText",
    "Marker G type DOMEvent",
  ],
  Array [
    "fillText",
    "Marker G type DOMEvent",
    5,
    107,
  ],
  Array [
    "measureText",
    "Non-interval marker F without data",
  ],
  Array [
    "fillText",
    "Non-interval marker F withou…",
    5,
    123,
  ],
  Array [
    "measureText",
    "Marker H with no end",
  ],
  Array [
    "fillText",
    "Marker H with no end",
    5,
    139,
  ],
]
`;
